2012-01-11  Jochen Eisinger  <jochen@chromium.org>

        Move the check for canExecuteScripts out of V8Proxy::retrieve
        https://bugs.webkit.org/show_bug.cgi?id=75533

        Reviewed by Adam Barth.

        * src/WebDevToolsAgentImpl.cpp:
        (WebKit::WebDevToolsAgentImpl::didClearWindowObject):

2012-01-10  Daniel Cheng  <dcheng@chromium.org>

        [chromium] Unreviewed, roll Chromium DEPS to r117121.

        * DEPS:

2012-01-10  Nat Duca  <nduca@chromium.org>

        [chromium] Reuse old timebase when activating CCDelayBasedTimeSource
        https://bugs.webkit.org/show_bug.cgi?id=75938

        Reviewed by James Robinson.

        * tests/CCDelayBasedTimeSourceTest.cpp:
        (WebKitTests::TEST):

2012-01-10  Tony Chang  <tony@chromium.org>

        [chromium] Unreviewed, roll Chromium DEPS to r117109.

        * DEPS:

2012-01-10  Bill Budge  <bbudge@chromium.org>

        Allow plugins to add rotate items to browser's context menu. Adds a new
        WebPluginAction struct, with rotate types.
        https://bugs.webkit.org/show_bug.cgi?id=75645

        Reviewed by Darin Fisher.

        * WebKit.gyp:
        * public/WebContextMenuData.h:
        * public/WebPlugin.h:
        (WebKit::WebPlugin::canRotateView):
        (WebKit::WebPlugin::rotateView):
        * public/WebPluginAction.h: Added.
        (WebKit::WebPluginAction::WebPluginAction):
        * public/WebView.h:
        * src/ContextMenuClientImpl.cpp:
        (WebKit::ContextMenuClientImpl::getCustomMenuFromDefaultItems):
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::performMediaPlayerAction):
        (WebKit::WebViewImpl::performPluginAction):
        * src/WebViewImpl.h:

2012-01-10  Dana Jansens  <danakj@chromium.org>

        [chromium] Create iterators for the RenderSurface-Layer tree
        https://bugs.webkit.org/show_bug.cgi?id=74203

        Reviewed by James Robinson.

        * WebKit.gypi:
        * tests/CCLayerIteratorTest.cpp: Added.
