@@ -1,3 +1,13 @@
+2012-01-10  Dmitry Lomov  <dslomov@google.com>
+
+        [Chromium] Remove obsolete references to WebWorker class.
+        https://bugs.webkit.org/show_bug.cgi?id=76020
+
+        Reviewed by David Levin.
+
+        * public/WebFrameClient.h:
+        * public/WebSharedWorkerClient.h:
+
 2012-01-11  Jochen Eisinger  <jochen@chromium.org>
 
         Move the check for canExecuteScripts out of V8Proxy::retrieve
